50-jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins
spec:
  ports:
  - name: jenkins-ui
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: slaves
    protocol: TCP
    port: 50000
    targetPort: 50000
  - name: docker
    protocol: TCP
    port: 2375
    targetPort: 2375
  selector:
    app: jenkins
    role: master
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: jenkins-discovery
#   namespace: jenkins
# spec:
#   ports:
#   - name: slaves
#     protocol: TCP
#     port: 50000
#     targetPort: 50000
#   selector:
#     app: jenkins
#     role: master
