60-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
spec:
  rules:
  - host: jenkins.${lbip}.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-service
          servicePort: jenkins-ui
